--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "author": "Reed",
   "license": "MIT",
   "dependencies": {
-    "resize-img": "^2.0.0",
-    "toastify-js": "^1.12.0"
+    "resize-img": "^2.0.0"
   },
   "devDependencies": {
     "electron": "^31.3.1"
